--- a/services.html
+++ b/services.html
@@ -31,7 +31,7 @@
     </header>
     <main>
         <section class="hero-banner hero-sub">
-            <img src="assets/images/vidiyal-graphics-services.jpg" alt="">
+            <img src="assets/images/services-banner.jpeg" alt="">
             <div class="custom-container">
                 <h1>Our Services</h1>
                 <p>From concept to creation, we offer a complete suite of design and printing services to elevate your brand.</p>
@@ -105,7 +105,7 @@
                     </div>
                 </div>
                 <div class="why-us-btm">
-                    <img src="assets/images/why-us.jpg" alt="">
+                    <img src="assets/images/process.jpeg" alt="">
                 </div>
             </div>
         </section>
@@ -141,7 +141,7 @@
                     </form>
                 </div>
                 <div class="home-cta-btm">
-                    <img src="assets/images/top-view-man-working-desk.jpg" alt="">
+                    <img src="assets/images/contact.jpeg" alt="">
                 </div>
             </div>
         </section>
@@ -204,7 +204,7 @@
         <section class="footer-btm">
             <div class="custom-container">
                 <p>&copy; 2025 Vidiyal Graphics. All rights reserved.</p>
-                <p>Designed by <a href="https://www.pixeldesign.info">Pixel Design</a></p>
+                <p>Designed by <a href="https://www.pixeldesign.info" target="_blank">Pixel Design</a></p>
             </div>
         </section>
     </footer>
