--- a/v-plus.html
+++ b/v-plus.html
@@ -31,7 +31,7 @@
     </header>
     <main>
         <section class="hero-banner hero-sub">
-            <img src="assets/images/v-plus-services.jpg" alt="">
+            <img src="assets/images/v-plus-banner.jpeg" alt="">
             <div class="custom-container">
                 <h1>V Plus Packaging Solutions</h1>
                 <p>Crafting innovative and sustainable packaging that protects your product and captivates your customers.</p>
@@ -106,7 +106,7 @@
                     </div>
                 </div>
                 <div class="why-us-btm">
-                    <img src="assets/images/why-us.jpg" alt="">
+                    <img src="assets/images/process.jpeg" alt="">
                 </div>
             </div>
         </section>
@@ -142,7 +142,7 @@
                     </form>
                 </div>
                 <div class="home-cta-btm">
-                    <img src="assets/images/top-view-man-working-desk.jpg" alt="">
+                    <img src="assets/images/contact.jpeg" alt="">
                 </div>
             </div>
         </section>
@@ -205,7 +205,7 @@
         <section class="footer-btm">
             <div class="custom-container">
                 <p>&copy; 2025 Vidiyal Graphics. All rights reserved.</p>
-                <p>Designed by <a href="https://www.pixeldesign.info">Pixel Design</a></p>
+                <p>Designed by <a href="https://www.pixeldesign.info" target="_blank">Pixel Design</a></p>
             </div>
         </section>
     </footer>
