--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     </form>
                 </div>
                 <div class="home-cta-btm">
-                    <img src="assets/images/top-view-man-working-desk.jpg" alt="">
+                    <img src="assets/images/contact.jpeg" alt="">
                 </div>
             </div>
         </section>
@@ -208,7 +208,7 @@
         <section class="footer-btm">
             <div class="custom-container">
                 <p>&copy; 2025 Vidiyal Graphics. All rights reserved.</p>
-                <p>Designed by <a href="https://www.pixeldesign.info">Pixel Design</a></p>
+                <p>Designed by <a href="https://www.pixeldesign.info" target="_blank">Pixel Design</a></p>
             </div>
         </section>
     </footer>
