--- a/v-plus.html
+++ b/v-plus.html
@@ -45,7 +45,7 @@
                     <p>V plus, a sub-brand of vidiyal graphics, specializes in creating custom packaging solutions. We understand that packaging is a critical touchpoint between your brand and your customers. Our mission is to make that moment unforgettable.</p>
                 </div>
                 <div class="about-us-btm">
-                    <img src="assets/images/about-us.jpg" alt="">
+                    <img src="assets/images/v-plus/v-plus-about.jpeg" alt="">
                 </div>
             </div>
         </section>
@@ -106,7 +106,7 @@
                     </div>
                 </div>
                 <div class="why-us-btm">
-                    <img src="assets/images/process.jpeg" alt="">
+                    <img src="assets/images/v-plus/v-plus-process.jpeg" alt="">
                 </div>
             </div>
         </section>
@@ -175,7 +175,7 @@
                         </a>
                         <a href="" target="_blank">
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"></path><path stroke-linecap="round" stroke-linejoin="round" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path></svg>
-                            <span>1267A, Sri Devi Complex, Sathy Main Road, Ganapathy, Coimbatore - 641 006</span>
+                            <span>199/2, V.R.Complex, Sivasakthi Colony, Ganapathy, Coimbatore - 641 006</span>
                         </a>
                     </div>
                 </div>
