--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <p>We bring your ideas to life with stunning print quality and creative design solutions. From business cards to brochures, we've got you covered.</p>
             </div>
         </section>
-        <section class="about-us">
+        <section class="about-us animate-on-scroll">
             <div class="custom-container">
                 <div class="about-us-top">
                     <h2>About Us</h2>
@@ -49,7 +49,7 @@
                 </div>
             </div>
         </section>
-        <section class="why-us">
+        <section class="why-us animate-on-scroll">
             <div class="custom-container">
                 <div class="why-us-top">
                     <div class="why-us-head">
@@ -85,7 +85,7 @@
                 </div>
             </div>
         </section>
-        <section class="services">
+        <section class="services animate-on-scroll">
             <div class="custom-container">
                 <div class="services-top">
                     <h2>Our services</h2>
@@ -112,7 +112,7 @@
                 </div>
             </div>
         </section>
-        <section class="home-cta" id="home-cta">
+        <section class="home-cta animate-on-scroll" id="home-cta">
             <div class="custom-container">
                 <div class="home-cta-top">
                     <div class="home-cta-head">
