--- a/services.html
+++ b/services.html
@@ -37,7 +37,7 @@
                 <p>From concept to creation, we offer a complete suite of design and printing services to elevate your brand.</p>
             </div>
         </section>
-        <section class="page-service">
+        <section class="page-service animate-on-scroll">
             <div class="custom-container">
                 <h3>What We Offer</h3>
                 <div class="page-service-items">
@@ -75,7 +75,7 @@
                 </div>
             </div>
         </section>
-        <section class="why-us">
+        <section class="why-us animate-on-scroll">
             <div class="custom-container">
                 <div class="why-us-top">
                     <div class="why-us-head">
@@ -109,7 +109,7 @@
                 </div>
             </div>
         </section>
-        <section class="home-cta" id="home-cta">
+        <section class="home-cta animate-on-scroll" id="home-cta">
             <div class="custom-container">
                 <div class="home-cta-top">
                     <div class="home-cta-head">
