--- a/v-plus.html
+++ b/v-plus.html
@@ -37,7 +37,7 @@
                 <p>Crafting innovative and sustainable packaging that protects your product and captivates your customers.</p>
             </div>
         </section>
-        <section class="about-us">
+        <section class="about-us animate-on-scroll">
             <div class="custom-container">
                 <div class="about-us-top">
                     <h2>About Us</h2>
@@ -49,7 +49,7 @@
                 </div>
             </div>
         </section>
-        <section class="page-service">
+        <section class="page-service animate-on-scroll">
             <div class="custom-container">
                 <h3>Our Packaging Products</h3>
                 <div class="page-service-items">
@@ -76,7 +76,7 @@
                 </div>
             </div>
         </section>
-        <section class="why-us">
+        <section class="why-us animate-on-scroll">
             <div class="custom-container">
                 <div class="why-us-top">
                     <div class="why-us-head">
@@ -110,7 +110,7 @@
                 </div>
             </div>
         </section>
-        <section class="home-cta" id="home-cta">
+        <section class="home-cta animate-on-scroll" id="home-cta">
             <div class="custom-container">
                 <div class="home-cta-top">
                     <div class="home-cta-head">
