--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <a class="header-logo" href="index.html"><img src="assets/images/vidiyal.svg" alt="" width="140"></a>
             <div class="nav-menu">
                 <a href="index.html" class="active">Home</a>
-                <a href="services.html">Services</a>
-                <a href="v-plus.html">V plus</a>
+                <a href="services.html" class="active">Vidiyal Graphics <span>(Offset Printing)</span></a>
+                <a href="v-plus.html">V plus <span>(Packaging)</span></a>
             </div>
             <a class="header-contact" href="#home-cta">Contact Us</a>
             <div class="hamburger-btn" onclick="hamburgerToggle()">
@@ -161,7 +161,7 @@
                     <h2>Quick Links</h2>
                     <div class="footer-quick-links">
                         <a href="index.html">Home</a>
-                        <a href="services.html">Services</a>
+                        <a href="services.html">Vidiyal Graphics</a>
                         <a href="v-plus.html">V plus</a>
                     </div>
                 </div>
