--- a/services.html
+++ b/services.html
@@ -18,8 +18,8 @@
             <a class="header-logo" href="index.html"><img src="assets/images/vidiyal.svg" alt="" width="140"></a>
             <div class="nav-menu">
                 <a href="index.html">Home</a>
-                <a href="services.html" class="active">Services</a>
-                <a href="v-plus.html">V plus</a>
+                <a href="services.html" class="active">Vidiyal Graphics <span>(Offset Printing)</span></a>
+                <a href="v-plus.html">V plus <span>(Packaging)</span></a>
             </div>
             <a class="header-contact" href="#home-cta">Contact Us</a>
             <div class="hamburger-btn" onclick="hamburgerToggle()">
@@ -46,7 +46,7 @@
                         <p>Visiting Cards</p>
                     </a>
                     <a class="page-service-item" href="#home-cta">
-                        <img src="assets/images/services/calenders.jpeg" alt="">
+                        <img src="assets/images/services/catelogue.jpeg" alt="">
                         <p>Catalogues</p>
                     </a>
                     <a class="page-service-item" href="#home-cta">
@@ -157,7 +157,7 @@
                     <h2>Quick Links</h2>
                     <div class="footer-quick-links">
                         <a href="index.html">Home</a>
-                        <a href="services.html">Services</a>
+                        <a href="services.html">Vidiyal Graphics</a>
                         <a href="v-plus.html">V plus</a>
                     </div>
                 </div>
